--- a/.github/workflows/rust-release.yml
+++ b/.github/workflows/rust-release.yml
@@ -46,7 +46,7 @@ jobs:
     needs: test
     runs-on: ${{ matrix.OS }}
     env:
-      NAME: archbelt # change with the name of your project
+      NAME: archbelt
       TARGET: ${{ matrix.TARGET }}
       OS: ${{ matrix.OS }}
     steps:
