--- a/.github/workflows/rust-release.yml
+++ b/.github/workflows/rust-release.yml
@@ -3,6 +3,7 @@ name: Rust Release
 on:
   push:
     branches: [ "main" ]
+    tags: [ 'v[0-9].[0-9]+.[0-9]+' ]
   pull_request:
     branches: [ "main", "development" ]
 
@@ -90,7 +91,7 @@ jobs:
             ./artifacts
 
   deploy:
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') # If we detect it's a tag build...
     needs: build
     runs-on: ubuntu-latest
     steps:
