--- a/.github/workflows/rust-release.yml
+++ b/.github/workflows/rust-release.yml
@@ -33,7 +33,7 @@ jobs:
         run: cargo test --verbose
 
   build:
-    if: contains(github.ref, 'main')
+    if: contains(github.ref, 'main') || startsWith(github.ref, 'refs/tags/')
     strategy:
       fail-fast: false
       matrix:
@@ -91,7 +91,7 @@ jobs:
             ./artifacts
 
   deploy:
-    if: startsWith(github.ref, 'refs/tags/') # If we detect it's a tag build...
+    if: startsWith(github.ref, 'refs/tags/')
     needs: build
     runs-on: ubuntu-latest
     steps:
