--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ steamlocate = "2.0.0-beta.2"
 serde_derive = "1.0.204"
 serde_json = "1.0.120"
 serde = { version = "1", features = ["derive"] }
+notify = "6"
 
 [profile.release]
 strip = true
